[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlab-users"
description = "Export GitLab users information and automate user accounts creation"
readme = "README.md"
authors = [
    { name = "Matthieu Boileau", email = "matthieu.boileau@math.unistra.fr" },
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["python-gitlab>=5.0.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "pytest",
    "pytest-cov",
    "build",
    "pre-commit"
]

[project.urls]
Homepage = "https://github.com/boileaum/gitlab-users"
Repository = "https://github.com/boileaum/gitlab-users"
Documentation = "https://gitlab-users.readthedocs.io"
Changelog = "https://github.com/boileaum/gitlab-users/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "gitlab_users.__version__" }

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# Pour inclure des fichiers supplémentaires dans sdist
# Malheureusement, setuptools moderne ne remplace pas complètement MANIFEST.in pour les sdist

[project.scripts]
gitlab-users = "gitlab_users.cli:main"

[tool.black]
line-length = 88
target-version = ['py37']

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src/gitlab_users --cov-report=term-missing --cov-report=xml"
