[metadata]
name = gitlab-users
version = 0.8.6
author = Matthieu Boileau
author_email = matthieu.boileau@math.unistra.fr
license = MIT
license_file = LICENSE
description = Export GitLab users information and automate user accounts creation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/boileaum/gitlab-users
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    python-gitlab>0.20,<3.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gitlab-users = gitlab_users.gitlab_users:main
